; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_line_buffer.c_buffer_fdinit.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_line_buffer.c_buffer_fdinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line_buffer = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @buffer_fdinit(%struct.line_buffer* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.line_buffer*, align 8
  %5 = alloca i32, align 4
  store %struct.line_buffer* %0, %struct.line_buffer** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @fdopen(i32 %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.line_buffer*, %struct.line_buffer** %4, align 8
  %9 = getelementptr inbounds %struct.line_buffer, %struct.line_buffer* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.line_buffer*, %struct.line_buffer** %4, align 8
  %11 = getelementptr inbounds %struct.line_buffer, %struct.line_buffer* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @fdopen(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
